# darkveil

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
core/: config.py  db.py  engine.py  logger.py
docs/: technical.md
gui/: main_window.py
gui/pages/: autopilot_page.py  exploit_page.py  honeypot_page.py  intel_page.py  monitor_page.py  report_page.py  scanner_page.py  target_page.py  tools_page.py
gui/widgets/: aero_theme.py  compare_dialog.py  dashboard.py  global_search.py  result_table.py  terminal_widget.py  toast.py
gui/widgets/themes/: __init__.py  aero.py  cyberpunk.py  dracula.py  engine.py  frutiger.py  modern.py  nord.py  win2k.py  win98.py  xp_luna.py
modules/: autopilot.py  cve_matcher.py  http_utils.py  nmap_importer.py
modules/exploit/: base.py  dict_manager.py  manager.py
modules/exploit/modules/: _brute_base.py  api_fuzzer.py  av_evasion.py  c2_beacon.py  cmdi_detector.py  cors_checker.py  cred_dump.py  credential_dump.py  cve_checker.py  dir_scanner.py  dns_zone_transfer.py  eicar_generator.py  file_encryptor.py  file_upload.py  ftp_brute.py  hash_crack.py  header_analyzer.py  host_discovery.py  host_header_inject.py  http_basic_brute.py  jwt_crack.py  keylogger_sim.py  lateral_psexec.py  lateral_wmi.py  mysql_brute.py  open_redirect.py  persistence_check.py  (+25 more)
modules/intel/: fofa_client.py  nvd_client.py  shodan_client.py
modules/report/: compliance.py  generator.py  pdf_generator.py
modules/scanner/: port_scanner.py  service_detector.py  web_scanner.py
resources/wordlists/: common_passwords.txt  common_users.txt  dirs.txt  sensitive_files.txt  subdomains.txt
tests/: test_config.py  test_db.py  test_engine.py  test_http_utils.py
